Reject image button added

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,13 +12,13 @@
 			<link rel="stylesheet" href="{{ asset("styles/fancybox/source/helpers/jquery.fancybox-buttons.css") }}">
 			<script src="{{ asset("https://code.jquery.com/jquery-3.2.1.js") }}"></script>
         {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('images/fav.png') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('files/fav.png') }}" />
     </head>
 {% endblock %}
 <body>
     <div class="row" id="header">
 	    <div class="pull-left">
-		     <img src="{{ asset("images/new_logo.png") }}" alt="" class="logo">
+		     <img src="{{ asset("files/new_logo.png") }}" alt="" class="logo">
 	    </div>
 	</div>
     <nav>
