--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -93,6 +93,11 @@
 
 					    {% else %}
 							<form action="{{ path('project_update', { 'id': project.id }) }}" method="post" id="reg-form">
+                                {% if ( project.isApproved or project.isRejected ) and app.user.type == "LittleBoss" %}
+									<div class="col-md-3">
+										<input type="submit" readonly="readonly" id="archive" name="archive" value="Архивирай"><div class="archive_icon"></div>
+									</div>
+                                {% endif %}
 					            {% if ( project.forApproval or project.isApproved ) and ( app.user.type == "LittleBoss" or app.user.type == "Boss" ) %}
 								<div class="col-md-2">
 									<input type="submit" readonly="readonly" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
@@ -105,6 +110,7 @@
 									<input type="submit" readonly="readonly" id="forApproval" name="forApproval" value="За одобрение"/><div class="forApproval_icon"></div>
 								</div>
                                 {% endif %}
+
 								{% if app.user.type == "LittleBoss" %}
 								<div class="col-md-2">
 									<input type="submit" readonly="readonly" id="hold" name="hold" value="На изчакване" onclick="return chk()"><div class="hold_icon"></div>
