--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -152,6 +152,7 @@ nav a{
     border-radius: 0;
     color: #e5e5e5;
     padding: 10px 10px 10px 10px;
+    margin-left: -1px;
     text-align: center;
 }
 nav a.active, nav a:hover{
@@ -510,7 +511,7 @@ nav a.active, nav a:hover{
 	font-weight:600;
 }
 .query_buttons{
-    padding-top: 15px;
+    padding-top: 10px;
     height:50px;
 }
 .query_buttons a{
@@ -663,7 +664,7 @@ form[name=appbundle_file] {
     text-decoration: none;
     float: left;	
 }
-input#button_delete:hover, #reject:hover, input#archive:hover, #button_edit:hover, #button_create:hover,#approve:hover, #appbundle_comments_Comment:hover, #hold:hover, #forApproval:hover, #button_details:hover, #working:hover{
+input#button_delete:hover, #reject:hover, input#archive:hover, #button_edit:hover,  #button_create:hover,#approve:hover, #appbundle_comments_Comment:hover, #hold:hover, #forApproval:hover, #button_details:hover, #working:hover{
     color: #fff;
 	opacity:1;
 	}
