--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -537,9 +537,16 @@ input#button_delete, #reject, #button_submit_popup, #rejectPopup{
     width: 100%;
 	opacity:0.8;
 }
+.boxImages{ 
+display: inline-block; 
+vertical-align: top; 
+width: 23%; 
+margin-bottom: 20px;  
+margin-right:15px;
+}
 input#archive{
-    background-color: #91c939;
-    border-bottom: 2px solid #76a728;
+    background-color: #3fa44b;
+    border-bottom: 2px solid #236c2c;
     border-radius: 0;
     color: #f4f4f4;
     padding: 10px 10px 10px 40px;
@@ -625,6 +632,7 @@ form[name=appbundle_file] {
     padding: 10px 10px 10px 10px;
     text-align: center;
 	opacity:0.8;
+    margin-bottom: 50px;
 }
 #hold{
     background-color: #fba02a;
@@ -696,6 +704,9 @@ input#button_delete:hover, #reject:hover, input#archive:hover, #button_edit:hove
     word-break: break-word;
 }
 .login_register{
+   -webkit-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.2);
     width: 500px;
     margin-right: auto;
     margin-left: auto;
